Link hero badge to links hub and remove em dashes

--- a/contact-form.html
+++ b/contact-form.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Detailed Intake Form — IsaacInPursuit</title>
+  <title>Detailed Intake Form - IsaacInPursuit</title>
   <meta name="description" content="Share context via Google Form before we connect." />
-  <meta property="og:title" content="Detailed Intake Form — IsaacInPursuit" />
+  <meta property="og:title" content="Detailed Intake Form - IsaacInPursuit" />
   <meta property="og:description" content="A Google Form intake for project and collaboration requests." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://isaacinpursuit.github.io/contact-form.html" />
   <meta property="og:image" content="/og.png" />
   <meta property="og:site_name" content="IsaacInPursuit" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Detailed Intake Form — IsaacInPursuit" />
+  <meta name="twitter:title" content="Detailed Intake Form - IsaacInPursuit" />
   <meta name="twitter:description" content="Provide background before we meet using the Google Form." />
   <meta name="twitter:image" content="https://isaacinpursuit.github.io/og.png" />
   <meta name="author" content="Isaac Johnston" />
