--- a/fractal.html
+++ b/fractal.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Golden Fractal — IsaacInPursuit</title>
+  <title>Golden Fractal - IsaacInPursuit</title>
   <meta name="description" content="Scroll to grow a golden-ratio fractal demo built by Isaac Johnston." />
-  <meta property="og:title" content="Golden Fractal — IsaacInPursuit" />
+  <meta property="og:title" content="Golden Fractal - IsaacInPursuit" />
   <meta property="og:description" content="Interactive fractal visualization that expands as you scroll." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://isaacinpursuit.github.io/fractal.html" />
   <meta property="og:image" content="/og.png" />
   <meta property="og:site_name" content="IsaacInPursuit" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Golden Fractal — IsaacInPursuit" />
+  <meta name="twitter:title" content="Golden Fractal - IsaacInPursuit" />
   <meta name="twitter:description" content="Interactive fractal visualization that expands as you scroll." />
   <meta name="twitter:image" content="https://isaacinpursuit.github.io/og.png" />
   <meta name="author" content="Isaac Johnston" />
