--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
 
   <header data-header class="relative z-20 mx-auto flex w-full max-w-5xl items-center justify-between gap-4 px-4 py-6 border border-transparent transition-all duration-300">
-    <a href="#hero" class="flex items-center gap-3 rounded-full bg-white/70 px-4 py-2 text-sm font-semibold tracking-wide text-slate-700 backdrop-blur dark:bg-slate-900/60 dark:text-slate-200">
+    <a href="/links.html" class="flex items-center gap-3 rounded-full bg-white/70 px-4 py-2 text-sm font-semibold tracking-wide text-slate-700 backdrop-blur dark:bg-slate-900/60 dark:text-slate-200">
       <span class="flex h-8 w-8 items-center justify-center rounded-full bg-brand-600 text-white">IJ</span>
       Isaac Johnston
     </a>
@@ -79,7 +79,7 @@
         <div class="space-y-7">
           <span class="inline-flex items-center gap-2 rounded-full border border-brand-200 bg-brand-50 px-4 py-1 text-xs font-semibold uppercase tracking-[0.2em] text-brand-700 dark:border-brand-500/40 dark:bg-brand-500/10 dark:text-brand-200">Now building</span>
           <h1 class="text-4xl font-extrabold leading-tight text-slate-900 dark:text-white md:text-5xl">Faith-led builder helping operators launch resilient ventures.</h1>
-          <p class="text-lg text-slate-600 dark:text-slate-300">I partner with founders, property leaders, and community builders to move from idea to traction. My approach blends capital strategy, product experimentation, and operational rigor — always rooted in faith and integrity.</p>
+          <p class="text-lg text-slate-600 dark:text-slate-300">I partner with founders, property leaders, and community builders to move from idea to traction. My approach blends capital strategy, product experimentation, and operational rigor, always rooted in faith and integrity.</p>
           <div class="flex flex-wrap gap-3">
             <a href="https://calendar.app.google/V6WfbjRRDxbFr6X69" class="inline-flex items-center gap-2 rounded-full bg-brand-600 px-5 py-2.5 text-sm font-semibold text-white shadow-soft transition hover:bg-brand-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-500">Book a 15‑min call</a>
             <a href="/resume.pdf" class="inline-flex items-center gap-2 rounded-full border border-slate-300 bg-white/70 px-5 py-2.5 text-sm font-semibold text-slate-700 transition hover:border-brand-500 hover:text-brand-600 dark:border-slate-700 dark:bg-slate-950/40 dark:text-slate-200 dark:hover:border-brand-400 dark:hover:text-brand-200">Download resume</a>
@@ -106,7 +106,7 @@
               <span class="inline-flex items-center gap-2 rounded-full bg-brand-500/15 px-3 py-1 text-xs font-semibold uppercase tracking-wide text-brand-700 dark:text-brand-200"><span aria-hidden="true">⚡️</span> Current focus</span>
               <span class="text-xs text-slate-500 dark:text-slate-400">Updated weekly</span>
             </div>
-            <p class="mt-4 text-sm text-slate-600 dark:text-slate-300">These are the hands-on sprints I’m running inside the initiatives detailed in the Projects section below — consider them the in-flight tasks powering each venture’s status.</p>
+            <p class="mt-4 text-sm text-slate-600 dark:text-slate-300">These are the hands-on sprints I’m running inside the initiatives detailed in the Projects section below. Consider them the in-flight tasks powering each venture’s status.</p>
             <ul class="mt-6 space-y-4 text-sm text-slate-600 dark:text-slate-300">
               <li class="flex gap-3">
                 <span class="mt-1 text-brand-600">▹</span>
@@ -134,7 +134,7 @@
       <div class="space-y-2 text-center">
         <p class="text-xs font-semibold uppercase tracking-[0.35em] text-brand-600 dark:text-brand-300">Focus areas</p>
         <h2 class="text-3xl font-bold text-slate-900 dark:text-white">Where I create leverage</h2>
-        <p class="mx-auto max-w-3xl text-base text-slate-600 dark:text-slate-300">My sweet spot is collaborating with founders and operators who need a strategic generalist — someone who can model capital stacks, ship product experiments, and activate community distribution.</p>
+        <p class="mx-auto max-w-3xl text-base text-slate-600 dark:text-slate-300">My sweet spot is collaborating with founders and operators who need a strategic generalist: someone who can model capital stacks, ship product experiments, and activate community distribution.</p>
       </div>
       <div class="grid gap-6 md:grid-cols-2">
         <article class="rounded-3xl border border-slate-200/80 bg-white/80 p-6 shadow-soft transition hover:-translate-y-1 hover:shadow-lg dark:border-slate-800/70 dark:bg-slate-950/60">
@@ -205,7 +205,7 @@
             <h3 class="text-xl font-semibold text-slate-900 dark:text-white">Cali Baking MVP</h3>
             <span class="rounded-full bg-amber-100 px-3 py-1 text-xs font-semibold uppercase tracking-wide text-amber-700 dark:bg-amber-500/20 dark:text-amber-100">In development</span>
           </div>
-          <p class="mt-3 text-sm text-slate-600 dark:text-slate-300">Experiments in e-commerce, delivery, and subscription models that scale a beloved local bakery beyond brick-and-mortar — still validating before a public launch.</p>
+          <p class="mt-3 text-sm text-slate-600 dark:text-slate-300">Experiments in e-commerce, delivery, and subscription models that scale a beloved local bakery beyond brick-and-mortar, still validating before a public launch.</p>
           <ul class="mt-4 space-y-2 text-sm text-slate-600 dark:text-slate-300">
             <li class="flex gap-2"><span class="text-brand-600">•</span> Built drop schedules and SMS waitlists to drive limited releases.</li>
             <li class="flex gap-2"><span class="text-brand-600">•</span> Testing partnerships with coffee shops and community markets.</li>
@@ -294,7 +294,7 @@
       </div>
       <div class="grid gap-10 md:grid-cols-[minmax(0,1.1fr)_minmax(0,0.9fr)] md:items-start">
         <div class="space-y-4 text-base leading-relaxed text-slate-600 dark:text-slate-300">
-          <p>I build at the intersection of real estate, finance, and entrepreneurship. Each chapter of my career has been guided by faith — a commitment to serve people, steward resources well, and grow communities with integrity.</p>
+          <p>I build at the intersection of real estate, finance, and entrepreneurship. Each chapter of my career has been guided by faith, a commitment to serve people, steward resources well, and grow communities with integrity.</p>
           <p>Whether structuring a deal, prototyping an MVP, or facilitating a partnership, I obsess over clarity, measurable outcomes, and the human beings affected by the work. I believe excellence honors God and creates room for others to thrive.</p>
         </div>
         <div class="space-y-4">
@@ -303,7 +303,7 @@
             <ul class="mt-4 space-y-3 text-sm text-slate-600 dark:text-slate-300">
               <li class="flex gap-3"><span class="mt-1 text-brand-600">▹</span><span><strong>Stewardship:</strong> Treat capital, time, and trust as gifts to be multiplied.</span></li>
               <li class="flex gap-3"><span class="mt-1 text-brand-600">▹</span><span><strong>Clarity:</strong> Communicate strategy and next actions so teams stay aligned.</span></li>
-              <li class="flex gap-3"><span class="mt-1 text-brand-600">▹</span><span><strong>Presence:</strong> Show up for people beyond the deal — mentorship, prayer, and encouragement.</span></li>
+              <li class="flex gap-3"><span class="mt-1 text-brand-600">▹</span><span><strong>Presence:</strong> Show up for people beyond the deal: mentorship, prayer, and encouragement.</span></li>
             </ul>
           </div>
           <div class="rounded-3xl border border-dashed border-brand-500/40 bg-brand-500/5 p-6 text-sm text-slate-600 dark:border-brand-500/30 dark:text-slate-200">
@@ -362,7 +362,7 @@
       </div>
       <div class="rounded-3xl border border-slate-200/80 bg-white/80 p-6 shadow-soft dark:border-slate-800/70 dark:bg-slate-950/60">
         <h3 class="text-lg font-semibold text-slate-900 dark:text-white">Alternate intake form</h3>
-        <p class="mt-3 text-sm text-slate-600 dark:text-slate-300">Prefer a structured questionnaire? Submit the Google Form below — it routes to the same inbox and helps me prep before we connect.</p>
+        <p class="mt-3 text-sm text-slate-600 dark:text-slate-300">Prefer a structured questionnaire? Submit the Google Form below. It routes to the same inbox and helps me prep before we connect.</p>
         <div class="mt-5 overflow-hidden rounded-2xl border border-slate-200 bg-white/90 shadow-inner dark:border-slate-800 dark:bg-slate-900/40">
           <iframe title="Google intake form" src="https://forms.gle/QEEHH4ic7yET2B9p9" loading="lazy" class="h-[640px] w-full" allowfullscreen></iframe>
         </div>
