--- a/links.html
+++ b/links.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>IsaacInPursuit — Links</title>
+  <title>IsaacInPursuit - Links</title>
   <meta name="description" content="All of IsaacInPursuit’s links: projects, socials, contact, resume." />
-  <meta property="og:title" content="IsaacInPursuit — Links" />
-  <meta property="og:description" content="Projects, socials, contact, resume — on a fast, self‑hosted page." />
+  <meta property="og:title" content="IsaacInPursuit - Links" />
+  <meta property="og:description" content="Projects, socials, contact, resume on a fast, self‑hosted page." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://isaacinpursuit.github.io/" />
   <meta property="og:image" content="/og.png" />
   <meta property="og:site_name" content="IsaacInPursuit" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="IsaacInPursuit — Links" />
-  <meta name="twitter:description" content="Projects, socials, contact, resume — on a fast, self-hosted hub." />
+  <meta name="twitter:title" content="IsaacInPursuit - Links" />
+  <meta name="twitter:description" content="Projects, socials, contact, resume on a fast, self-hosted hub." />
   <meta name="twitter:image" content="https://isaacinpursuit.github.io/og.png" />
   <meta name="author" content="Isaac Johnston" />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%8C%8A%3C/text%3E%3C/svg%3E" />
@@ -47,7 +47,12 @@
           <div class="mx-auto h-28 w-28 rounded-full bg-gradient-to-tr from-brand-500/20 to-brand-700/20 border border-slate-200 dark:border-slate-800 grid place-items-center">
             <img src="/avatar.jpg" alt="Isaac avatar" class="h-24 w-24 rounded-full object-cover" onerror="this.replaceWith(Object.assign(document.createElement('div'),{className:'text-4xl',textContent:'🧭'}))">
           </div>
-          <h1 class="mt-4 text-2xl font-extrabold">Isaac Johnston</h1>
+          <h1 class="mt-4 text-2xl font-extrabold">
+            <a href="https://isaacinpursuit.github.io/#hero" class="inline-flex items-center gap-2 text-slate-900 transition hover:text-brand-600 dark:text-slate-100 dark:hover:text-brand-300">
+              <span class="flex h-8 w-8 items-center justify-center rounded-full bg-brand-600 text-white">IJ</span>
+              <span>Isaac Johnston</span>
+            </a>
+          </h1>
           <p class="mt-1 text-sm text-slate-600 dark:text-slate-300">Founder @ IIP Holdings • UNC Charlotte • Eagle Scout</p>
           <div class="mt-3 inline-flex items-center gap-2 text-xs text-slate-500">
             <button id="themeToggle" class="px-2.5 py-1 rounded-lg border border-slate-300 dark:border-slate-700">🌗 Theme</button>
