Improve navigation and add project detail pages

--- a/contact-form.html
+++ b/contact-form.html
@@ -37,7 +37,10 @@
   <main class="min-h-screen py-12 px-4">
     <div class="mx-auto flex w-full max-w-4xl flex-col gap-6">
       <header class="flex flex-wrap items-center justify-between gap-3 rounded-3xl border border-slate-200/80 bg-white/80 px-5 py-4 shadow-soft dark:border-slate-800/70 dark:bg-slate-900/60">
-        <a href="/links.html" class="inline-flex items-center gap-2 text-sm font-semibold text-brand-600 transition hover:text-brand-500 dark:text-brand-300 dark:hover:text-brand-200">← Back to links</a>
+        <div class="flex flex-wrap items-center gap-2 text-sm font-semibold">
+          <a href="/index.html" class="inline-flex items-center gap-2 text-brand-600 transition hover:text-brand-500 dark:text-brand-300 dark:hover:text-brand-200">← Back to home</a>
+          <a href="/links.html" class="inline-flex items-center gap-2 text-slate-600 transition hover:text-brand-600 dark:text-slate-300 dark:hover:text-brand-200">Links hub</a>
+        </div>
         <button id="themeToggle" class="rounded-full border border-slate-300 px-4 py-2 text-sm font-medium text-slate-700 transition hover:border-brand-500 hover:text-brand-600 dark:border-slate-700 dark:text-slate-200 dark:hover:border-brand-400 dark:hover:text-brand-200">🌗 Theme</button>
       </header>
       <div class="rounded-3xl border border-slate-200/80 bg-white/80 shadow-soft dark:border-slate-800/70 dark:bg-slate-900/60">
