--- a/links.html
+++ b/links.html
@@ -54,7 +54,8 @@
             </a>
           </h1>
           <p class="mt-1 text-sm text-slate-600 dark:text-slate-300">Founder @ IIP Holdings • UNC Charlotte • Eagle Scout</p>
-          <div class="mt-3 inline-flex items-center gap-2 text-xs text-slate-500">
+          <div class="mt-3 flex flex-wrap items-center justify-center gap-2 text-xs text-slate-500">
+            <a href="/index.html" class="px-2.5 py-1 rounded-lg border border-slate-300 dark:border-slate-700 hover:bg-slate-100 dark:hover:bg-slate-800">← Home</a>
             <button id="themeToggle" class="px-2.5 py-1 rounded-lg border border-slate-300 dark:border-slate-700">🌗 Theme</button>
             <a href="/resume.pdf" class="px-2.5 py-1 rounded-lg border border-slate-300 dark:border-slate-700 hover:bg-slate-100 dark:hover:bg-slate-800">Resume</a>
           </div>
@@ -100,7 +101,7 @@
             </a>
 
 
-          <a class="block w-full rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-4 hover:bg-slate-100 dark:hover:bg-slate-800 transition" href="#farm">
+          <a class="block w-full rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-4 hover:bg-slate-100 dark:hover:bg-slate-800 transition" href="/projects/farm-compliance.html">
             <div class="flex items-center justify-between">
               <div>
                 <div class="font-semibold">Farm Compliance MVP</div>
@@ -111,7 +112,7 @@
           </a>
 
 
-          <a class="block w-full rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-4 hover:bg-slate-100 dark:hover:bg-slate-800 transition" href="#uncc">
+          <a class="block w-full rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-4 hover:bg-slate-100 dark:hover:bg-slate-800 transition" href="/projects/uncc-student-network.html">
             <div class="flex items-center justify-between">
               <div>
                 <div class="font-semibold">UNCC Student Network</div>
