--- a/fractal.html
+++ b/fractal.html
@@ -15,23 +15,45 @@
   <meta name="twitter:description" content="Interactive fractal visualization that expands as you scroll." />
   <meta name="twitter:image" content="https://isaacinpursuit.github.io/og.png" />
   <meta name="author" content="Isaac Johnston" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
   <style>
-    body {margin:0; overflow-x:hidden; background:#000; color:#fff; font-family:sans-serif;}
+    body {margin:0; overflow-x:hidden; background:#020617; color:#fff; font-family:'Inter',system-ui,sans-serif;}
     canvas {position:fixed; top:0; left:0; display:block; z-index:-1;}
+    header.nav {position:fixed; top:1rem; left:50%; transform:translateX(-50%); display:flex; gap:1rem; padding:0.55rem 1.2rem; border-radius:9999px; border:1px solid rgba(148,163,184,.4); background:rgba(15,23,42,.75); backdrop-filter:blur(14px); z-index:20; font-size:0.9rem;}
+    header.nav a {color:#e2e8f0; text-decoration:none; font-weight:600; letter-spacing:.01em;}
+    header.nav a:hover, header.nav a:focus-visible {color:#38bdf8;}
     .spin {position:fixed; top:1rem; right:1rem; width:50px; height:50px; border-radius:50%; border:4px solid #fff; border-top-color:transparent; animation:spin 2s linear infinite;}
     @keyframes spin {to{transform:rotate(360deg);}}
-    section {height:100vh; display:flex; align-items:center; justify-content:center; font-size:2rem; padding:1rem; text-align:center;}
-    .hidden {opacity:0; transform:translateY(20px); transition:opacity .6s, transform .6s;}
+    section {height:100vh; display:flex; align-items:center; justify-content:center; padding:1.5rem; text-align:center;}
+    .hero {flex-direction:column; gap:1rem; background:#0b1120;}
+    .hero h1 {font-size:2.6rem; margin:0; letter-spacing:.01em;}
+    .hero p {max-width:680px; margin:0 auto; font-size:1.05rem; line-height:1.6; color:#cbd5f5;}
+    .hidden {opacity:0; transform:translateY(20px); transition:opacity .6s, transform .6s; font-size:1.6rem;}
     .show {opacity:1; transform:none;}
+    footer {position:fixed; bottom:1.25rem; left:50%; transform:translateX(-50%); padding:0.45rem 1.1rem; border-radius:9999px; border:1px solid rgba(148,163,184,.35); background:rgba(15,23,42,.7); backdrop-filter:blur(14px); font-size:0.85rem; z-index:20;}
+    footer a {color:#38bdf8; font-weight:600; text-decoration:none;}
+    footer a:hover, footer a:focus-visible {text-decoration:underline;}
   </style>
 </head>
 <body>
+  <header class="nav">
+    <a href="/index.html">← Back to home</a>
+    <a href="/index.html#projects">Projects</a>
+    <a href="/links.html">Links hub</a>
+  </header>
   <div class="spin" aria-hidden="true"></div>
   <canvas id="fractal" aria-hidden="true"></canvas>
-  <section class="show" style="background:#111;">Scroll to grow the golden fractal 🍃</section>
+  <section class="show hero">
+    <h1>Golden fractal explorer</h1>
+    <p>Scroll to grow the golden-ratio tree. This interactive sketch demonstrates how I prototype data visualizations and interactive art when translating complex systems for operators and stakeholders.</p>
+  </section>
   <section class="hidden" style="background:#222;">Math: φ = (1+√5)/2 rules the lengths.</section>
   <section class="hidden" style="background:#333;">History: Egyptians, Greeks and da Vinci sought this harmony.</section>
   <section class="hidden" style="background:#444;">Forgotten patterns: triadic branches echo in nature.</section>
+  <section class="hidden" style="background:#2d3748;">Ready for more? Head back to the portfolio to explore current work.</section>
+  <footer>Prefer slides? Visit the <a href="/index.html#projects">project snapshots</a>.</footer>
   <script>
     const canvas = document.getElementById('fractal');
     const ctx = canvas.getContext('2d');
