Restore homepage and add math demo gallery

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
         Isaac Johnston
       </a>
       <div class="flex flex-wrap items-center justify-end gap-2 sm:gap-3">
+        <a href="/math-gallery.html" class="inline-flex items-center gap-2 rounded-full border border-slate-300 bg-white/70 px-4 py-2 text-sm font-semibold text-slate-700 transition hover:border-brand-500 hover:text-brand-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-500 dark:border-slate-700 dark:bg-slate-950/60 dark:text-slate-200 dark:hover:border-brand-400 dark:hover:text-brand-200" title="Open the interactive math demo gallery">
+          <span aria-hidden="true">🌀</span>
+          Math demos
+        </a>
         <button id="themeToggle" type="button" class="inline-flex items-center gap-2 rounded-full border border-slate-300 bg-white/70 px-4 py-2 text-sm font-semibold text-slate-700 transition hover:border-brand-500 hover:text-brand-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-500 dark:border-slate-700 dark:bg-slate-950/60 dark:text-slate-200 dark:hover:border-brand-400 dark:hover:text-brand-200" title="Toggle light and dark theme">
           <span aria-hidden="true">🌗</span>
           Theme
@@ -144,6 +148,7 @@
       <a class="transition hover:text-brand-600 dark:hover:text-brand-400" href="#projects">Projects</a>
       <a class="transition hover:text-brand-600 dark:hover:text-brand-400" href="#about">About</a>
       <a class="transition hover:text-brand-600 dark:hover:text-brand-400" href="#contact">Contact</a>
+      <a class="transition hover:text-brand-600 dark:hover:text-brand-400" href="/math-gallery.html">Math demos</a>
     </nav>
   </header>
 
@@ -334,6 +339,14 @@
         <p class="mx-auto max-w-3xl text-base text-slate-600 dark:text-slate-300">Resources, calendars, and artifacts to learn more about my work. Save what resonates or share it with someone who might benefit.</p>
       </div>
       <div class="grid gap-5 sm:grid-cols-2">
+        <a class="group rounded-3xl border border-slate-200/80 bg-white/70 p-6 shadow-soft transition hover:-translate-y-1 hover:shadow-lg dark:border-slate-800/70 dark:bg-slate-950/60" href="/math-gallery.html">
+          <div class="flex items-center justify-between">
+            <div class="text-lg font-semibold text-slate-900 dark:text-white">Math demo gallery</div>
+            <span class="text-xl">🌀</span>
+          </div>
+          <p class="mt-3 text-sm text-slate-600 dark:text-slate-300">Explore twelve interactive visualizations built in pure JavaScript.</p>
+          <p class="mt-4 text-sm font-semibold text-brand-600 dark:text-brand-300">Launch the gallery →</p>
+        </a>
         <a class="group rounded-3xl border border-slate-200/80 bg-white/70 p-6 shadow-soft transition hover:-translate-y-1 hover:shadow-lg dark:border-slate-800/70 dark:bg-slate-950/60" href="/resume.pdf">
           <div class="flex items-center justify-between">
             <div class="text-lg font-semibold text-slate-900 dark:text-white">Resume</div>
