Restore homepage layout and surface math gallery within demo

--- a/fractal.html
+++ b/fractal.html
@@ -53,7 +53,10 @@
   <section class="hidden" style="background:#333;">History: Egyptians, Greeks and da Vinci sought this harmony.</section>
   <section class="hidden" style="background:#444;">Forgotten patterns: triadic branches echo in nature.</section>
   <section class="hidden" style="background:#2d3748;">Ready for more? Head back to the portfolio to explore current work.</section>
-  <footer>Prefer slides? Visit the <a href="/index.html#projects">project snapshots</a>.</footer>
+  <footer>
+    <span>Prefer slides? Visit the <a href="/index.html#projects">project snapshots</a>.</span>
+    <span style="margin-left:0.75rem;">Want more math? <a href="/math-gallery.html">Explore the full gallery</a>.</span>
+  </footer>
   <script>
     const canvas = document.getElementById('fractal');
     const ctx = canvas.getContext('2d');
