--- a/links.html
+++ b/links.html
@@ -23,15 +23,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-  <!-- Tailwind (CDN) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = { darkMode: 'class', theme: { extend: {
-      fontFamily: { sans: ['Inter','system-ui','sans-serif'] },
-      colors: { brand: { 500:'#06b6d4',600:'#0891b2',700:'#0e7490' } },
-      boxShadow: { soft: '0 12px 32px rgba(2,6,23,.18)' }
-    }}};
-  </script>
+  <!-- Styles -->
+  <link rel="stylesheet" href="/styles/tailwind.css">
   <style>
     .fade-in { animation: fadeIn .5s ease both }
     @keyframes fadeIn { from{opacity:0;transform:translateY(6px)} to{opacity:1;transform:none} }
@@ -163,11 +156,20 @@
 
         <!-- Contact form -->
         <div id="contact" class="px-8 pb-8">
-          <form action="https://formspree.io/f/mkgnjopd" method="POST" data-form class="space-y-3">
-            <div class="text-sm font-semibold">Quick message</div>
-            <input required type="text" name="name" placeholder="Your name" class="w-full px-4 py-3 rounded-xl border border-slate-300 dark:border-slate-700 bg-transparent" />
-            <input required type="email" name="email" placeholder="you@example.com" class="w-full px-4 py-3 rounded-xl border border-slate-300 dark:border-slate-700 bg-transparent" />
-            <textarea required name="message" rows="4" placeholder="What's up?" class="w-full px-4 py-3 rounded-xl border border-slate-300 dark:border-slate-700 bg-transparent"></textarea>
+          <form action="https://formspree.io/f/mkgnjopd" method="POST" data-form class="space-y-4">
+            <p class="text-sm font-semibold">Quick message</p>
+            <div class="space-y-1">
+              <label for="links-name" class="block text-sm font-medium text-slate-600 dark:text-slate-300">Name</label>
+              <input id="links-name" required type="text" name="name" placeholder="Your name" class="w-full px-4 py-3 rounded-xl border border-slate-300 dark:border-slate-700 bg-transparent" />
+            </div>
+            <div class="space-y-1">
+              <label for="links-email" class="block text-sm font-medium text-slate-600 dark:text-slate-300">Email</label>
+              <input id="links-email" required type="email" name="email" placeholder="you@example.com" class="w-full px-4 py-3 rounded-xl border border-slate-300 dark:border-slate-700 bg-transparent" />
+            </div>
+            <div class="space-y-1">
+              <label for="links-message" class="block text-sm font-medium text-slate-600 dark:text-slate-300">Message</label>
+              <textarea id="links-message" required name="message" rows="4" placeholder="What's up?" class="w-full px-4 py-3 rounded-xl border border-slate-300 dark:border-slate-700 bg-transparent"></textarea>
+            </div>
             <button type="submit" class="w-full px-4 py-3 rounded-xl bg-brand-600 text-white shadow-soft transition hover:bg-brand-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-500">Send</button>
             <p data-form-status role="status" aria-live="polite" class="hidden text-sm font-medium text-brand-600 dark:text-brand-300"></p>
           </form>
