--- a/projects/uncc-student-network.html
+++ b/projects/uncc-student-network.html
@@ -22,14 +22,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = { darkMode: 'class', theme: { extend: {
-      fontFamily: { sans: ['Inter','system-ui','sans-serif'] },
-      colors: { brand: { 500:'#06b6d4',600:'#0891b2',700:'#0e7490' } },
-      boxShadow: { soft: '0 16px 40px rgba(15,23,42,.18)' }
-    }}}
-  </script>
+  <link rel="stylesheet" href="/styles/tailwind.css">
 </head>
 <body class="bg-slate-50 text-slate-900 antialiased dark:bg-slate-950 dark:text-slate-100">
   <main class="min-h-screen py-12 px-4">
