--- a/index.html
+++ b/index.html
@@ -265,6 +265,18 @@
         <a href="#contact" class="inline-flex items-center gap-2 text-sm font-semibold text-brand-600 transition hover:text-brand-500 dark:text-brand-300 dark:hover:text-brand-200">Share an opportunity →</a>
       </div>
       <div class="space-y-6">
+        <a href="/projects/iip-private-holdings.html" class="group block rounded-3xl border border-slate-200/80 bg-white/80 p-6 shadow-soft transition hover:-translate-y-1 hover:shadow-lg focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-500 dark:border-slate-800/70 dark:bg-slate-950/60" aria-label="IIP Private Holdings project overview">
+          <div class="flex items-center justify-between gap-4">
+            <h3 class="text-xl font-semibold text-slate-900 dark:text-white">IIP Private Holdings, LLC</h3>
+            <span class="rounded-full bg-emerald-100 px-3 py-1 text-xs font-semibold uppercase tracking-wide text-emerald-700 dark:bg-emerald-500/20 dark:text-emerald-100">Active</span>
+          </div>
+          <p class="mt-3 text-sm text-slate-600 dark:text-slate-300">Investment and management vehicle exploring small business acquisitions and shared services.</p>
+          <ul class="mt-4 space-y-2 text-sm text-slate-600 dark:text-slate-300">
+            <li class="flex gap-2"><span class="text-brand-600">•</span> Evaluating service and real-asset deals across the Southeast.</li>
+            <li class="flex gap-2"><span class="text-brand-600">•</span> Building a network of operators and capital partners.</li>
+          </ul>
+          <span class="mt-5 inline-flex items-center gap-2 text-sm font-semibold text-brand-600 transition group-hover:text-brand-500 dark:text-brand-300 dark:group-hover:text-brand-200">View project overview<span aria-hidden="true">→</span></span>
+        </a>
         <a href="/projects/farm-compliance.html" class="group block rounded-3xl border border-slate-200/80 bg-white/80 p-6 shadow-soft transition hover:-translate-y-1 hover:shadow-lg focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand-500 dark:border-slate-800/70 dark:bg-slate-950/60" aria-label="Farm Compliance MVP project overview">
           <div class="flex items-center justify-between gap-4">
             <h3 class="text-xl font-semibold text-slate-900 dark:text-white">Farm Compliance MVP</h3>
