--- a/math-gallery.html
+++ b/math-gallery.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IsaacInPursuit • Math Demo Gallery</title>
   <meta name="description" content="A dozen interactive math and geometry visualizations rendered client-side by Isaac Johnston." />
+  <meta
+    http-equiv="Content-Security-Policy"
+    content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; script-src 'self' 'unsafe-inline'; connect-src 'self'; frame-src https://forms.gle https://docs.google.com; base-uri 'self'; form-action 'self';"
+  />
   <meta property="og:title" content="Math Demo Gallery • IsaacInPursuit" />
   <meta property="og:description" content="Explore phyllotaxis, modular multiplication, epicycles, flow fields, and more in an interactive canvas gallery." />
   <meta property="og:type" content="website" />
@@ -18,6 +22,12 @@
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%8C%8A%3C/text%3E%3C/svg%3E" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    rel="preload"
+    as="style"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+    crossorigin
+  >
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -57,6 +67,7 @@
       height: 100vh;
       display: block;
       touch-action: none;
+      outline: none;
     }
 
     #control-bar {
