--- a/fractal.html
+++ b/fractal.html
@@ -245,467 +245,7 @@
     <span>Scroll or pinch to zoom. Drag to pan. Press <strong>space</strong> to toggle autopilot.</span>
     <a href="/math-gallery.html">Prefer a gallery of math demos? Visit the interactive collection →</a>
   </footer>
-  <script>
-    (() => {
-      const canvas = document.getElementById('fractal');
-      const ctx = canvas.getContext('2d', { alpha: false });
-      const statusEl = document.getElementById('status');
-      const autopilotBtn = document.getElementById('toggle-autopilot');
-      const jumpBtn = document.getElementById('jump-highlight');
-      const resetBtn = document.getElementById('reset-view');
-
-      const BASE_CENTER = { x: -0.745028, y: 0.18618 };
-      const BASE_ZOOM = 1.1;
-      const BASE_SPAN = 3.3;
-      const MIN_ZOOM = 0.45;
-      const MAX_ZOOM = 250000;
-      const TILE_BASE = 64;
-      const LOG2 = Math.log(2);
-      const ESCAPE_RADIUS = 4;
-      const HIGHLIGHTS = [
-        { label: 'Seahorse Valley', x: -0.743643887037151, y: 0.13182590420533, zoom: 1800 },
-        { label: 'Electric Bloom', x: -0.745113, y: 0.112376, zoom: 5200 },
-        { label: 'Elephant Twins', x: 0.27322626, y: 0.00798497, zoom: 520 },
-        { label: 'Spiral Necklace', x: -0.10109636384562, y: 0.95628651080914, zoom: 1350 },
-        { label: 'Celtic Spirals', x: -0.390541, y: -0.586788, zoom: 3400 },
-        { label: 'Nebula Filaments', x: -1.25066, y: 0.02012, zoom: 640 }
-      ];
-
-      let cssWidth = 0;
-      let cssHeight = 0;
-      let dpr = 1;
-      let canvasWidth = 0;
-      let canvasHeight = 0;
-      let tileSize = TILE_BASE;
-      let tiles = [];
-      let needsTileRebuild = true;
-      let needsBackdrop = true;
-      let palettePhase = 0;
-
-      let targetCenter = { ...BASE_CENTER };
-      let targetZoom = BASE_ZOOM;
-      let displayCenter = { ...BASE_CENTER };
-      let displayZoom = BASE_ZOOM;
-      let queuedCenter = { ...BASE_CENTER };
-      let queuedZoom = BASE_ZOOM;
-      let autopilot = true;
-      let activeHighlight = null;
-      let holdTimer = 0;
-      let lastFrame = typeof performance !== 'undefined' && performance.now ? performance.now() : Date.now();
-      let pointerSnapshots = new Map();
-      let lastPinchDistance = null;
-      let isManualSnap = false;
-
-      const reduceMotionMedia = window.matchMedia?.('(prefers-reduced-motion: reduce)');
-      if (reduceMotionMedia?.matches) {
-        autopilot = false;
-      }
-
-      function clampZoom(value) {
-        return Math.min(MAX_ZOOM, Math.max(MIN_ZOOM, value));
-      }
-
-      function resize() {
-        cssWidth = window.innerWidth || document.documentElement.clientWidth || 800;
-        cssHeight = window.innerHeight || document.documentElement.clientHeight || 600;
-        dpr = Math.min(2, window.devicePixelRatio || 1);
-        canvasWidth = Math.max(200, Math.floor(cssWidth * dpr));
-        canvasHeight = Math.max(200, Math.floor(cssHeight * dpr));
-        canvas.width = canvasWidth;
-        canvas.height = canvasHeight;
-        canvas.style.width = cssWidth + 'px';
-        canvas.style.height = cssHeight + 'px';
-        tileSize = Math.max(48, Math.floor(TILE_BASE * dpr));
-        needsTileRebuild = true;
-        needsBackdrop = true;
-      }
-
-      function shuffle(array) {
-        for (let i = array.length - 1; i > 0; i--) {
-          const j = Math.floor(Math.random() * (i + 1));
-          [array[i], array[j]] = [array[j], array[i]];
-        }
-      }
-
-      function rebuildTiles() {
-        tiles = [];
-        const columns = Math.ceil(canvasWidth / tileSize);
-        const rows = Math.ceil(canvasHeight / tileSize);
-        for (let y = 0; y < rows; y++) {
-          for (let x = 0; x < columns; x++) {
-            tiles.push({ x: x * tileSize, y: y * tileSize });
-          }
-        }
-        shuffle(tiles);
-        needsTileRebuild = false;
-      }
-
-      function drawBackdrop() {
-        ctx.setTransform(1, 0, 0, 1, 0, 0);
-        ctx.fillStyle = '#020617';
-        ctx.fillRect(0, 0, canvasWidth, canvasHeight);
-        const glow = ctx.createRadialGradient(
-          canvasWidth * 0.52,
-          canvasHeight * 0.48,
-          canvasWidth * 0.1,
-          canvasWidth * 0.5,
-          canvasHeight * 0.52,
-          Math.max(canvasWidth, canvasHeight) * 0.75
-        );
-        glow.addColorStop(0, 'rgba(56, 189, 248, 0.12)');
-        glow.addColorStop(0.55, 'rgba(15, 23, 42, 0.18)');
-        glow.addColorStop(1, 'rgba(2, 6, 23, 0.92)');
-        ctx.fillStyle = glow;
-        ctx.fillRect(0, 0, canvasWidth, canvasHeight);
-        needsBackdrop = false;
-      }
-
-      function screenToComplex(clientX, clientY, center = displayCenter, zoom = displayZoom) {
-        const spanX = BASE_SPAN / zoom;
-        const spanY = spanX * (cssHeight / cssWidth);
-        const normX = cssWidth ? clientX / cssWidth : 0;
-        const normY = cssHeight ? clientY / cssHeight : 0;
-        return {
-          x: center.x + (normX - 0.5) * spanX,
-          y: center.y + (normY - 0.5) * spanY
-        };
-      }
-
-      function updateStatus() {
-        if (!statusEl) return;
-        const zoomText = formatZoom(displayZoom);
-        const modeText = autopilot ? 'Autopilot drifting' : 'Manual control';
-        const highlightText = activeHighlight ? ` • ${activeHighlight.label}` : '';
-        statusEl.textContent = `Zoom ${zoomText} • ${modeText}${highlightText}`;
-      }
-
-      function formatZoom(value) {
-        if (value < 1) return value.toFixed(2) + '×';
-        if (value < 1000) return value.toFixed(1) + '×';
-        if (value < 1e6) return (value / 1000).toFixed(1) + 'k×';
-        return (value / 1e6).toFixed(2) + 'M×';
-      }
-
-      function updateAutopilotButton() {
-        if (!autopilotBtn) return;
-        autopilotBtn.dataset.state = autopilot ? 'on' : 'off';
-        autopilotBtn.textContent = autopilot ? 'Pause autopilot' : 'Resume autopilot';
-      }
-
-      function chooseHighlight(exclude) {
-        const options = HIGHLIGHTS.filter(h => h !== exclude);
-        if (!options.length) return exclude || HIGHLIGHTS[0];
-        return options[Math.floor(Math.random() * options.length)];
-      }
-
-      function jumpToHighlight(highlight, { announce = true } = {}) {
-        if (!highlight) return;
-        targetCenter = { x: highlight.x, y: highlight.y };
-        targetZoom = clampZoom(highlight.zoom);
-        activeHighlight = highlight;
-        if (announce && statusEl) {
-          statusEl.setAttribute('data-highlight', highlight.label);
-        }
-        if (!autopilot) {
-          snapToTarget();
-        }
-        needsTileRebuild = true;
-        needsBackdrop = true;
-      }
-
-      function resetView() {
-        targetCenter = { ...BASE_CENTER };
-        targetZoom = BASE_ZOOM;
-        activeHighlight = null;
-        snapToTarget();
-      }
-
-      function setAutopilot(value) {
-        autopilot = Boolean(value);
-        updateAutopilotButton();
-        if (autopilot && !activeHighlight) {
-          jumpToHighlight(chooseHighlight());
-        }
-      }
-
-      function beginManualInteraction() {
-        if (autopilot) {
-          setAutopilot(false);
-        }
-      }
-
-      function snapToTarget() {
-        displayCenter = { ...targetCenter };
-        displayZoom = targetZoom;
-        queuedCenter = { ...displayCenter };
-        queuedZoom = displayZoom;
-        needsTileRebuild = true;
-        needsBackdrop = true;
-        isManualSnap = true;
-      }
-
-      function panBy(dx, dy) {
-        const spanX = BASE_SPAN / targetZoom;
-        const spanY = spanX * (cssHeight / cssWidth);
-        targetCenter = {
-          x: targetCenter.x - (dx / Math.max(1, cssWidth)) * spanX,
-          y: targetCenter.y + (dy / Math.max(1, cssHeight)) * spanY
-        };
-        snapToTarget();
-      }
-
-      function zoomAt(clientX, clientY, factor) {
-        const focusBefore = screenToComplex(clientX, clientY, targetCenter, targetZoom);
-        targetZoom = clampZoom(targetZoom * factor);
-        const spanX = BASE_SPAN / targetZoom;
-        const spanY = spanX * (cssHeight / cssWidth);
-        const normX = cssWidth ? clientX / cssWidth : 0.5;
-        const normY = cssHeight ? clientY / cssHeight : 0.5;
-        targetCenter = {
-          x: focusBefore.x - (normX - 0.5) * spanX,
-          y: focusBefore.y - (normY - 0.5) * spanY
-        };
-        snapToTarget();
-      }
-
-      function renderTiles(batchCount) {
-        if (!tiles.length) return;
-        const spanX = BASE_SPAN / displayZoom;
-        const spanY = spanX * (canvasHeight / canvasWidth);
-        const startX = displayCenter.x - spanX / 2;
-        const startY = displayCenter.y - spanY / 2;
-        const maxIter = Math.max(80, Math.floor(110 + Math.log(displayZoom + 1) * 38));
-        const drift = palettePhase;
-        const brightnessBoost = Math.min(1.5, 1 + Math.log(displayZoom + 1) * 0.08);
-
-        for (let batch = 0; batch < batchCount && tiles.length; batch++) {
-          const tile = tiles.pop();
-          const tileWidth = Math.min(tileSize, canvasWidth - tile.x);
-          const tileHeight = Math.min(tileSize, canvasHeight - tile.y);
-          const imageData = ctx.createImageData(tileWidth, tileHeight);
-          const data = imageData.data;
-          let offset = 0;
-          for (let ty = 0; ty < tileHeight; ty++) {
-            const pixelY = tile.y + ty;
-            const cy = startY + (pixelY / canvasHeight) * spanY;
-            for (let tx = 0; tx < tileWidth; tx++) {
-              const pixelX = tile.x + tx;
-              const cx = startX + (pixelX / canvasWidth) * spanX;
-
-              let zx = 0;
-              let zy = 0;
-              let iter = 0;
-              let zx2 = 0;
-              let zy2 = 0;
-              while (zx2 + zy2 <= ESCAPE_RADIUS && iter < maxIter) {
-                zy = 2 * zx * zy + cy;
-                zx = zx2 - zy2 + cx;
-                zx2 = zx * zx;
-                zy2 = zy * zy;
-                iter++;
-              }
-
-              let r, g, b;
-              if (iter >= maxIter) {
-                const radial = Math.hypot(cx - displayCenter.x, cy - displayCenter.y) / Math.max(spanX, spanY);
-                const shade = 6 + Math.floor(42 * Math.pow(1 - Math.min(1, radial * 2), 1.5));
-                r = g = b = Math.max(8, Math.min(120, shade));
-              } else {
-                const mag = zx2 + zy2;
-                let smooth = iter;
-                if (mag > 1) {
-                  smooth = iter + 1 - Math.log(Math.log(mag)) / LOG2;
-                }
-                const t = Math.max(0, Math.min(1, smooth / maxIter));
-                [r, g, b] = samplePalette(t, drift, brightnessBoost);
-              }
-
-              data[offset++] = r;
-              data[offset++] = g;
-              data[offset++] = b;
-              data[offset++] = 255;
-            }
-          }
-          ctx.putImageData(imageData, tile.x, tile.y);
-        }
-      }
-
-      function samplePalette(t, phase, boost) {
-        const wave = phase + t * 6.283185307179586;
-        const wave2 = wave + 2.09439510239;
-        const wave3 = wave + 4.18879020479;
-        const base = Math.pow(t, 0.3);
-        const accent = Math.pow(t, 0.65);
-        const r = Math.round(255 * Math.min(1, 0.2 + boost * (0.55 * base + 0.45 * (0.5 + 0.5 * Math.sin(wave)))));
-        const g = Math.round(255 * Math.min(1, 0.18 + boost * (0.58 * base + 0.42 * (0.5 + 0.5 * Math.sin(wave2)))));
-        const b = Math.round(255 * Math.min(1, 0.22 + boost * (0.62 * accent + 0.38 * (0.5 + 0.5 * Math.sin(wave3)))));
-        return [r, g, b];
-      }
-
-      function frame(now) {
-        const currentTime = now || (typeof performance !== 'undefined' && performance.now ? performance.now() : Date.now());
-        const deltaSeconds = Math.min(0.1, Math.max(0.001, (currentTime - lastFrame) / 1000));
-        lastFrame = currentTime;
-
-        if (!isManualSnap) {
-          const smoothing = autopilot ? 1 - Math.pow(2, -deltaSeconds * 2.4) : 1 - Math.pow(2, -deltaSeconds * 6);
-          displayCenter.x += (targetCenter.x - displayCenter.x) * smoothing;
-          displayCenter.y += (targetCenter.y - displayCenter.y) * smoothing;
-          displayZoom += (targetZoom - displayZoom) * smoothing;
-        } else {
-          isManualSnap = false;
-        }
-
-        const centerDelta = Math.max(
-          Math.abs(displayCenter.x - queuedCenter.x),
-          Math.abs(displayCenter.y - queuedCenter.y)
-        );
-        const zoomDelta = Math.abs(displayZoom - queuedZoom) / Math.max(1, displayZoom);
-        if (centerDelta > 1e-6 || zoomDelta > 0.002 || needsTileRebuild) {
-          queuedCenter = { ...displayCenter };
-          queuedZoom = displayZoom;
-          rebuildTiles();
-          needsBackdrop = true;
-        }
-
-        if (needsBackdrop) {
-          drawBackdrop();
-        }
-
-        if (tiles.length) {
-          const batch = Math.max(3, Math.floor((canvasWidth * canvasHeight) / 200000));
-          renderTiles(batch);
-          holdTimer = 0;
-        } else if (autopilot && activeHighlight) {
-          const distance = Math.hypot(targetCenter.x - displayCenter.x, targetCenter.y - displayCenter.y);
-          const zoomDiff = Math.abs(targetZoom - displayZoom) / targetZoom;
-          if (distance < 5e-7 && zoomDiff < 0.006) {
-            holdTimer += deltaSeconds;
-            if (holdTimer > 9) {
-              holdTimer = 0;
-              jumpToHighlight(chooseHighlight(activeHighlight));
-            }
-          }
-        }
-
-        palettePhase = (palettePhase + deltaSeconds * (0.6 + 0.4 * Math.sin(currentTime * 0.00018 + displayZoom * 0.00004))) % (Math.PI * 2);
-        updateStatus();
-        requestAnimationFrame(frame);
-      }
-
-      function handleWheel(event) {
-        event.preventDefault();
-        beginManualInteraction();
-        const delta = event.deltaY;
-        const factor = Math.pow(1.18, -delta / 120);
-        zoomAt(event.clientX, event.clientY, factor);
-      }
-
-      function handlePointerDown(event) {
-        beginManualInteraction();
-        canvas.setPointerCapture(event.pointerId);
-        pointerSnapshots.set(event.pointerId, { x: event.clientX, y: event.clientY });
-        if (pointerSnapshots.size === 1) {
-          lastPinchDistance = null;
-        }
-      }
-
-      function handlePointerMove(event) {
-        const snapshot = pointerSnapshots.get(event.pointerId);
-        if (!snapshot) return;
-        const prevX = snapshot.x;
-        const prevY = snapshot.y;
-        snapshot.x = event.clientX;
-        snapshot.y = event.clientY;
-
-        if (pointerSnapshots.size === 1) {
-          const dx = event.clientX - prevX;
-          const dy = event.clientY - prevY;
-          if (Math.abs(dx) > 0 || Math.abs(dy) > 0) {
-            panBy(dx, dy);
-          }
-        } else if (pointerSnapshots.size >= 2) {
-          const pointers = Array.from(pointerSnapshots.values());
-          const [first, second] = pointers;
-          const dx = first.x - second.x;
-          const dy = first.y - second.y;
-          const distance = Math.hypot(dx, dy);
-          const midX = (first.x + second.x) / 2;
-          const midY = (first.y + second.y) / 2;
-          if (lastPinchDistance && distance > 0) {
-            const scale = distance / lastPinchDistance;
-            if (Number.isFinite(scale) && scale > 0) {
-              const factor = Math.pow(scale, 0.85);
-              zoomAt(midX, midY, factor);
-            }
-          }
-          lastPinchDistance = distance;
-        }
-      }
-
-      function handlePointerUp(event) {
-        pointerSnapshots.delete(event.pointerId);
-        if (pointerSnapshots.size < 2) {
-          lastPinchDistance = null;
-        }
-      }
-
-      function handleKey(event) {
-        if (event.code === 'Space') {
-          event.preventDefault();
-          setAutopilot(!autopilot);
-        } else if (event.key === 'r' || event.key === 'R') {
-          resetView();
-        } else if (event.key === 'j' || event.key === 'J') {
-          beginManualInteraction();
-          jumpToHighlight(chooseHighlight(activeHighlight), { announce: true });
-        }
-      }
-
-      resize();
-      window.addEventListener('resize', resize);
-      canvas.addEventListener('wheel', handleWheel, { passive: false });
-      canvas.addEventListener('pointerdown', handlePointerDown);
-      canvas.addEventListener('pointermove', handlePointerMove);
-      canvas.addEventListener('pointerup', handlePointerUp);
-      canvas.addEventListener('pointercancel', handlePointerUp);
-      document.addEventListener('keydown', handleKey);
-
-      autopilotBtn?.addEventListener('click', () => {
-        setAutopilot(!autopilot);
-      });
-
-      jumpBtn?.addEventListener('click', () => {
-        beginManualInteraction();
-        jumpToHighlight(chooseHighlight(activeHighlight), { announce: true });
-      });
-
-      resetBtn?.addEventListener('click', () => {
-        beginManualInteraction();
-        resetView();
-      });
-
-      if (reduceMotionMedia) {
-        const handleReduceMotionChange = event => {
-          if (event.matches) {
-            setAutopilot(false);
-          }
-        };
-        if (typeof reduceMotionMedia.addEventListener === 'function') {
-          reduceMotionMedia.addEventListener('change', handleReduceMotionChange);
-        } else if (typeof reduceMotionMedia.addListener === 'function') {
-          reduceMotionMedia.addListener(handleReduceMotionChange);
-        }
-      }
-
-      updateAutopilotButton();
-      if (autopilot) {
-        jumpToHighlight(chooseHighlight(), { announce: false });
-      } else {
-        resetView();
-      }
-      requestAnimationFrame(frame);
-    })();
-  </script>
+  <script src="/js/fractal/renderer.js" defer></script>
+  <script src="/js/fractal/lab.js" defer></script>
 </body>
 </html>
