Add local web vitals bundle and logging

--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
   <!-- CODEX: HEAD INJECT START -->
   <link rel="stylesheet" href="/src/styles/logo-3d.css">
   <script defer src="/src/utils/logo-3d.js"></script>
+  <script type="module" src="/src/utils/web-vitals.js"></script>
   <!-- Particle engine is imported dynamically by theme switcher; no direct <script> tag needed -->
   <!-- CODEX: HEAD INJECT END -->
 
